--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,18 +1,12 @@
 
 .footer{
     background-color: $colorBg-Dark;
-  .logo--down{
+      
+    &--colicondfoo {
+      fill: #ffffff;
       color: #ffffff;
-    }  
-
-
-    .social-title {
-        text-transform: uppercase;
-        color: var(--white-txt-color);
-        font-size: 14px;
-        line-height: 1.14;
-        margin-bottom: 20px;
     }
+
 
     &-section {
         display: flex;
@@ -27,22 +21,29 @@
         margin-left: 70px;
       }  
     
-    &__socicon{
-        fill: #fff;
 
-    }
 
 
 }
 
+.logo--down{
+  color: #ffffff;
+}  
+
+
+.social-title {
+  text-transform: uppercase;
+  color: var(--white-txt-color);
+  font-size: 14px;
+  line-height: 1.14;
+  margin-bottom: 20px;
+}
 .social-footer {
   width: 208px;
   padding-top: 15px;
   margin-left: 70px;
 }
-.social__link{
-  fill: #ffffff;
-}
+
 .address{
     margin-top: 20px;
     font-style: normal;
