--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 /*for border*/
 /*box-shadow color*/
 /*modal*/
+/**/
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -30,6 +31,9 @@ body,
 ol,
 ul,
 li,
+dl,
+dt,
+dd,
 p {
   padding: 0;
   margin: 0;
@@ -103,55 +107,99 @@ a {
 }
 
 .button {
-  padding: 6px 22px;
   font-family: Roboto;
-  font-style: Medium;
   font-size: 16px;
-  line-height: 1.39;
   border: none;
   border-radius: 4px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   /*filter*/
-  /*hero*/
-  /*submit*/
 }
 
-.button__filter {
-  color: #212121;
-  background-color: #f5f4fa;
-}
-
-.button__filter:hover {
+.button:hover {
   color: #ffffff;
   background-color: #188ce8;
   cursor: pointer;
 }
 
-.button__hero {
+.button__main {
+  width: 200px;
+  height: 50px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-style: 700;
+  line-height: 1.875;
   color: #ffffff;
   background-color: #2196f3;
-  padding: 10px 32px;
-  font-weight: bold;
+  line-height: 1.625;
+  letter-spacing: 6%;
+}
+
+.button__filter {
+  padding: 6px 22px;
+  font-style: 400;
+  color: #212121;
+  background-color: #f5f4fa;
+  line-height: 1.625;
+  letter-spacing: 3%;
+}
+
+.botton__icon {
+  position: relative;
+  display: inline-block;
+  top: 6px;
+  left: 5px;
+  fill: #ffffff;
+  width: 24px;
+  height: 24px;
+  /* transform: rotate(1deg); */
+}
+
+/* .email-foo > div > button:hover~ */
+.botton__icon:hover {
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+  -webkit-transition: -webkit-transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 1260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button__Filter {
+  font-family: Roboto;
   font-size: 16px;
-  line-height: 1.88;
+  border: none;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button__hero:hover {
-  background-color: #188ce8;
-  cursor: pointer;
-}
-
-.button__submit {
+.button__Filter:hover {
   color: #ffffff;
-  background-color: #2196f3;
-}
-
-.button__submit:hover {
   background-color: #188ce8;
   cursor: pointer;
+}
+
+.button__Filter {
+  padding: 6px 22px;
+  font-style: 400;
+  color: #212121;
+  background-color: #f5f4fa;
+  line-height: 1.625;
+  letter-spacing: 3%;
+}
+
+.button__Filter {
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 a {
@@ -647,14 +695,17 @@ a {
   margin-left: 93px;
 }
 
-.footer__email-foo > div {
+.footer__send {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   position: relative;
 }
 
-.footer__email-foo > div > input {
+.email {
   width: 358px;
   height: 50px;
   padding-left: 65px;
@@ -682,55 +733,6 @@ a {
 .footer__email-foo > div > input:hover,
 .footer__email-foo > div > input:focus {
   border: 1px solid #188ce8;
-}
-
-.footer__email-foo > div > button {
-  width: 200px;
-  height: 50px;
-  background: #2196f3;
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
-  color: #ffffff;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1.87;
-  margin-left: 12px;
-  -webkit-transition: background-color 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 260ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer__email-foo > div > button:hover {
-  cursor: pointer;
-  background: #188ce8;
-  border: 1px solid #188ce8;
-  /* transform: rotate(360deg); */
-  -webkit-transition: fill 1260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 1260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), fill 1260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), fill 1260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.botton__icon {
-  position: relative;
-  display: inline-block;
-  top: 6px;
-  left: 5px;
-  fill: #ffffff;
-  width: 24px;
-  height: 24px;
-  /* transform: rotate(1deg); */
-}
-
-/* .email-foo > div > button:hover~ */
-.botton__icon:hover {
-  -webkit-transform: rotate(360deg);
-          transform: rotate(360deg);
-  -webkit-transition: -webkit-transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 1260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /**/
@@ -801,12 +803,10 @@ a {
 
 [data-tooltip] {
   position: relative;
-  /* Относительное позиционирование */
 }
 
 [data-tooltip]::after {
   content: attr(data-tooltip);
-  /* <abbr title="I'm small tooltip. Don't kill me!">Hover me!</abbr> */
   position: absolute;
   right: 0;
   top: 0;
@@ -1106,4 +1106,142 @@ a {
   text-decoration: underline;
   cursor: pointer;
 }
+
+/*********************************/
+/*********фильтр******************/
+/*********************************/
+.filter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 50px;
+}
+
+.filter > li + li {
+  margin-left: 8px;
+}
+
+.btnFilter {
+  display: block;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  background-color: var(--bgBtnFilter, #f5f4fa);
+  border-radius: 4px;
+  padding: 6px 22px;
+  color: var(--secondary-txt-color, #212121);
+  border: 1px solid var(--secondary-border-color, #eeeeee);
+  /* margin-bottom: 50px; */
+}
+
+.btnFilter:focus,
+.btnFilter:hover {
+  cursor: pointer;
+  color: var(--white-txt-color, #ffffff);
+  background-color: var(--primary-accent-color, #2196f3);
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  /* border-radius: 4px; */
+  border: 1px solid var(--primary-accent-color, #2196f3);
+}
+
+/*********************************/
+/*********портфолио***************/
+/*********************************/
+/*********************************/
+/*********каталог*****************/
+/*********************************/
+.catalog {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  /* justify-content: space-between; */
+  margin-top: calc(-1 * $gap);
+  margin-left: calc(-1 * $gap);
+  padding: 0;
+}
+
+.catalog-card {
+  border: 1px solid #eee;
+  margin-top: 28px;
+  margin-left: 28px;
+  -ms-flex-preferred-size: calc(100% / $col - $gap);
+      flex-basis: calc(100% / $col - $gap);
+}
+
+.box {
+  position: relative;
+  overflow: hidden;
+}
+
+.catalog-card:hover .overlay,
+.catalog-card:hover .overlay-p {
+  -webkit-transform: translatex(0);
+          transform: translatex(0);
+  color: var(--white-txt-color);
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
+  -webkit-transform: translatey(100%);
+          transform: translatey(100%);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay-p {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  /* width: 100%; */
+  height: 100%;
+  color: #2196f300;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  padding: 10px;
+  margin: 0;
+  -webkit-transform: translatey(100%);
+          transform: translatey(100%);
+  -webkit-transition: color 400ms linear 100ms, -webkit-transform 360ms linear;
+  transition: color 400ms linear 100ms, -webkit-transform 360ms linear;
+  transition: transform 360ms linear, color 400ms linear 100ms;
+  transition: transform 360ms linear, color 400ms linear 100ms, -webkit-transform 360ms linear;
+}
+
+.catalog-card:focus,
+.catalog-card:hover {
+  -webkit-box-shadow: 0px 4px 4px #00000040;
+          box-shadow: 0px 4px 4px #00000040;
+}
+
+.catalog-card p {
+  font-size: 16px;
+  line-height: 1.9;
+  padding: 20px 24px;
+}
+
+.h3catCard {
+  color: var(--secondary-txt-color, #212121);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+/*********************************/
+/******конец страницы*************/
+/*********************************/
 /*# sourceMappingURL=main.css.map */
