--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,48 +1,108 @@
 .button{
-    padding: 6px 22px;
     font-family : Roboto;
-    font-style: Medium;
     font-size: 16px;
-    line-height: 1.39;
     border: none;
     border-radius: 4px;
     box-shadow: $shadow-box;
+    transition: background-color 250ms $cubic;
 
+    &:hover {
+        color: $colorTxt-main;
+        background-color: $colorBtnBg-hover;
+        cursor: pointer;
+    }
+
+    // &:hover ~ use {
+    //     transform: rotate(360deg);
+    //     transition: transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
+       
+    // }
+
+    &__main{
+        width: 200px;
+        height: 50px;
+        justify-content: center;
+        align-items: center;
+        font-style: 700;
+        line-height: 1.875;
+        color: $colorLight;
+        background-color: $colorBtnBg-activ;
+        line-height: 1.625;
+        letter-spacing: 6%;
+    }
 /*filter*/  
     &__filter{
+        padding: 6px 22px;
+        font-style: 400;
         color: $colorTxt-secondary;
         background-color: $colorBtnBg-filter;
+        line-height: 1.625;
+        letter-spacing: 3%;
     }
-    &__filter:hover{
-        color: $colorTxt-main;
-        background-color: $colorBtnBg-hover;
-        cursor: pointer;
-    }
-
-/*hero*/  
-    &__hero{
-        color: $colorTxt-main;
-        background-color: $colorBtnBg-activ;
-        padding: 10px 32px;
-        font-weight: bold;
-        font-size: 16px;
-        line-height: 1.88;
-        transition: background-color 250ms $cubic;
-    }
-
-    &__hero:hover{
-        background-color: $colorBtnBg-hover;
-        cursor: pointer;
-    }
-
-/*submit*/    
-    &__submit{
-        color: $colorTxt-main;
-        background-color: $colorBtnBg-activ;    
-    }
+}    
+.botton__icon {
+    position: relative;
+    display: inline-block;
+    top: 6px;
+    left: 5px;
+    fill: #ffffff;
+    width: 24px;
+    height: 24px;
+    /* transform: rotate(1deg); */
     
-    &__submit:hover{
-        background-color: $colorBtnBg-hover;
-        cursor: pointer;
-    }
+  }
+  /* .email-foo > div > button:hover~ */
+  .botton__icon:hover {
+    
+    transform: rotate(360deg);
+    transition: transform 1260ms $cubic;
+  }
+
+
+  $color--primary: #b29;
+$color--secondary: #19d;
+
+
+
+%btn--base {
+    font-family : Roboto;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    box-shadow: $shadow-box;
+    transition: background-color 250ms $cubic;
+
+  &:hover {
+    color: $colorTxt-main;
+    background-color: $colorBtnBg-hover;
+    cursor: pointer;
+  }
+}
+
+%btn--main {
+    @extend %btn--base;
+    width: 200px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    font-style: 700;
+    line-height: 1.875;
+    color: $colorLight;
+    background-color: $colorBtnBg-activ;
+    line-height: 1.625;
+    letter-spacing: 6%;
+  }
+  
+  %btn--filter {
+    @extend %btn--base;
+    padding: 6px 22px;
+    font-style: 400;
+    color: $colorTxt-secondary;
+    background-color: $colorBtnBg-filter;
+    line-height: 1.625;
+    letter-spacing: 3%;
+}
+.button__Filter{
+    @extend %btn--filter;
+    transition: background-color 250ms $cubic, border 250ms $cubic, color 250ms $cubic;
 }
