--- a/scss/components/_inputs.scss
+++ b/scss/components/_inputs.scss
@@ -1,4 +1,34 @@
-.input{
+%input--base{
+    display: block;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+    transition: border 260ms $cubic;
+    // &:hover {
 
+    // } 
+}
+
+%input--mod {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+    padding-left: 40px;
+    transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+%textarea{
+    @extend %input--mod;
+    padding-top: 10px;
+    height: 120px;
+    overflow: hidden;
+    resize:none;
+    //margin-top: 28px;
+    //margin-bottom: 20px;
     
+    // &:hover {
+
+    // }  
 }
