--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -20,16 +20,11 @@
         padding-top: 15px;
         margin-left: 70px;
       }  
-    
-
-
-
 }
 
 .logo--down{
   color: #ffffff;
 }  
-
 
 .social-title {
   text-transform: uppercase;
@@ -73,14 +68,17 @@
     width: 570px;
     height: 88px;
     margin-left: 93px;
+    
   }
   
-  .footer__email-foo > div {
+  // .footer__email-foo > div,
+  .footer__send {
     display: flex;
+    justify-content: space-between;
     position: relative;
   }
   
-  .footer__email-foo > div > input {
+  .email {
     width: 358px;
     height: 50px;
     padding-left: 65px;
@@ -108,46 +106,28 @@
     border: 1px solid #188ce8;
   }
   
-  .footer__email-foo > div > button {
-    width: 200px;
-    height: 50px;
-    background: #2196f3;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border: none;
-    color: #ffffff;
+  // .footer__email-foo > div > button {
+  //   width: 200px;
+  //   height: 50px;
+  //   background: #2196f3;
+  //   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  //   border-radius: 4px;
+  //   border: none;
+  //   color: #ffffff;
   
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 1.87;
-    margin-left: 12px;
-    transition: 
-    background-color 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+  //   font-weight: bold;
+  //   font-size: 16px;
+  //   line-height: 1.87;
+  //   margin-left: 12px;
+  //   transition: 
+  //   background-color 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  // }
   
-  .footer__email-foo > div > button:hover {
-    cursor: pointer;
-    background: #188ce8;
-    border: 1px solid #188ce8;
-    /* transform: rotate(360deg); */
-    transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), fill 1260ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .botton__icon {
-    position: relative;
-    display: inline-block;
-    top: 6px;
-    left: 5px;
-    fill: #ffffff;
-    width: 24px;
-    height: 24px;
-    /* transform: rotate(1deg); */
-    
-  }
-  /* .email-foo > div > button:hover~ */
-  .botton__icon:hover {
-    
-    transform: rotate(360deg);
-    transition: transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+  // .button:hover {
+  //   cursor: pointer;
+  //   background: #188ce8;
+  //   border: 1px solid #188ce8;
+  //   /* transform: rotate(360deg); */
+  //   transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), fill 1260ms cubic-bezier(0.4, 0, 0.2, 1);
+  // }
   
