--- a/scss/components/_checkbox.scss
+++ b/scss/components/_checkbox.scss
@@ -20,7 +20,7 @@
         margin-right: 10px;
         border: 2px solid #212121;
         border-radius: 2px;
-        background-color: #ffffff;
+        background-color: $colorMaxLight;
         transition: background-color 260ms $cubic;
         cursor: pointer;
     }
