--- a/scss/layout/_craft.scss
+++ b/scss/layout/_craft.scss
@@ -28,6 +28,6 @@
         height: 70px;
         bottom: 0px;
         background-color: rgba(47, 48, 58, 0.8);
-        color: #ffffff;
+        color: $colorMaxLight;
     }
 }
