--- a/scss/utils/_variable.scss
+++ b/scss/utils/_variable.scss
@@ -1,11 +1,11 @@
+/**colors**/
+/**********/
+$colorMaxLight: #ffffff;
+$colorMaxDark: #000000;
+/*for text & links*/
 $colorTxt-main:#ffffff;
 $colorTxt-primary:#757575;
 $colorTxt-secondary:#212121;
-/**colors**/
-/**********/
-$colorLight: #ffffff;
-$colorDark: #000000;
-/*for text & links*/
 $colorTxt-Light: #ffffff;
 $colorTxt-primary: #757575;
 $colorTxt-secondary: #212121;
