--- a/scss/blocks/_team-card.scss
+++ b/scss/blocks/_team-card.scss
@@ -4,7 +4,7 @@
     min-height: 428px;
     font-size: 16px;
     line-height: 1.18;
-    background-color: var(--white-txt-color, #ffffff);
+    background-color: var(--white-txt-color, $colorMaxLight);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
