--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -12,11 +12,6 @@
         cursor: pointer;
     }
 
-    // &:hover ~ use {
-    //     transform: rotate(360deg);
-    //     transition: transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
-       
-    // }
 
     &__main{
         width: 200px;
@@ -25,7 +20,7 @@
         align-items: center;
         font-style: 700;
         line-height: 1.875;
-        color: $colorLight;
+        color: $colorMaxLight;
         background-color: $colorBtnBg-activ;
         line-height: 1.625;
         letter-spacing: 6%;
@@ -45,7 +40,7 @@
     display: inline-block;
     top: 6px;
     left: 5px;
-    fill: #ffffff;
+    fill: $colorMaxLight;
     width: 24px;
     height: 24px;
     /* transform: rotate(1deg); */
@@ -87,7 +82,7 @@ $color--secondary: #19d;
     align-items: center;
     font-style: 700;
     line-height: 1.875;
-    color: $colorLight;
+    color: $colorMaxLight;
     background-color: $colorBtnBg-activ;
     line-height: 1.625;
     letter-spacing: 6%;
