--- a/scss/default/_pageset.scss
+++ b/scss/default/_pageset.scss
@@ -10,14 +10,20 @@
     padding-top: 94px;
     padding-bottom: 94px;
 }
-
+h1,
+h2,
+h3,
+h4,
+h5 {
+    color: var(--color-txt--title, $colorTxt-secondary);
+}
 body {
     color:$colorTxt-primary;
     font-family: "Roboto", sans-serif;
     font-size: 14px;
     line-height: 1.5;
     letter-spacing: 0.03em;
-    background: $colorLight;
+    background: $colorMaxLight;
 }
 
 .invisible {
