--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -7,7 +7,7 @@
     padding-top: 200px;
     padding-bottom: 200px;
 
-    &-title{
+    &__title{
       color: $colorTxt-Light;
       font-weight: 900;
       font-size: 44px;
@@ -15,6 +15,9 @@
       letter-spacing: 0.06em;
       text-transform: uppercase;
       margin-bottom: 30px;
+    }
+    &__btn{
+      
     }
 }
 
