--- a/css/main.css
+++ b/css/main.css
@@ -258,11 +258,28 @@ a {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.subscription__email-input--sub {
-  display: block;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border-radius: 4px;
+.subscription__email-input--sub:hover, .subscription__email-input--sub:focus {
+  border: 1px solid #188ce8;
+}
+
+.modal__textarea {
+  overflow: hidden;
+  resize: none;
+}
+
+.modal__textarea:hover, .modal__textarea:focus {
+  border: 1px solid #188ce8;
+}
+
+.modal__textarea {
+  width: 100%;
+  height: 120px;
+  padding-top: 10px;
+}
+
+.modal__textarea {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  padding-left: 40px;
   -webkit-transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -283,8 +300,13 @@ a {
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-.subscription__email-input--sub:hover, .subscription__email-input--sub:focus {
-  border: 1px solid #188ce8;
+.subscription__email-input--sub, .modal__textarea {
+  display: block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 4px;
+  -webkit-transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 a {
@@ -863,24 +885,6 @@ a {
   border-radius: 50%;
   border: 1px solid #00000033;
   background-color: #ffffff;
-}
-
-.modal__textarea {
-  display: block;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border-radius: 4px;
-  margin-top: 28px;
-  margin-bottom: 20px;
-  width: 100%;
-  height: 120px;
-  padding-left: 40px;
-  padding-top: 10px;
-  overflow: hidden;
-  resize: none;
-  -webkit-transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal__close {
