--- a/scss/layout/_modal.scss
+++ b/scss/layout/_modal.scss
@@ -60,20 +60,22 @@
     border: 1px solid #00000033;
     background-color: $colorMaxLight;
   }
+
   &__textarea {
-    display: block;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    box-sizing: border-box;
-    border-radius: 4px;
-    margin-top: 28px;
-    margin-bottom: 20px;
-    width: 100%;
-    height: 120px;
-    padding-left: 40px;
-    padding-top: 10px;
-    overflow: hidden;
-    resize:none;
-    transition: border 260ms $cubic;
+    @extend %textarea-modal;
+    // display: block;
+    // border: 1px solid rgba(33, 33, 33, 0.2);
+    // box-sizing: border-box;
+    // border-radius: 4px;
+    // margin-top: 28px;
+    // margin-bottom: 20px;
+    // width: 100%;
+    // height: 120px;
+    // padding-left: 40px;
+    // padding-top: 10px;
+    // overflow: hidden;
+    // resize:none;
+    // transition: border 260ms $cubic;
   }
   &__close {
     display: block;
