--- a/scss/layout/_modal.scss
+++ b/scss/layout/_modal.scss
@@ -67,8 +67,8 @@
     // border: 1px solid rgba(33, 33, 33, 0.2);
     // box-sizing: border-box;
     // border-radius: 4px;
-    // margin-top: 28px;
-    // margin-bottom: 20px;
+    margin-top: 28px;
+    margin-bottom: 20px;
     // width: 100%;
     // height: 120px;
     // padding-left: 40px;
