--- a/css/main.css
+++ b/css/main.css
@@ -262,6 +262,10 @@ a {
   border: 1px solid #188ce8;
 }
 
+.modal__input:hover, .modal__input:focus {
+  border: 1px solid #188ce8;
+}
+
 .modal__textarea {
   overflow: hidden;
   resize: none;
@@ -271,13 +275,18 @@ a {
   border: 1px solid #188ce8;
 }
 
+.modal__input {
+  width: 100%;
+  height: 40px;
+}
+
 .modal__textarea {
   width: 100%;
   height: 120px;
   padding-top: 10px;
 }
 
-.modal__textarea {
+.modal__input, .modal__textarea {
   border: 1px solid rgba(33, 33, 33, 0.2);
   padding-left: 40px;
   -webkit-transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -300,7 +309,7 @@ a {
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-.subscription__email-input--sub, .modal__textarea {
+.subscription__email-input--sub, .modal__input, .modal__textarea {
   display: block;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -905,18 +914,6 @@ a {
 .modal__btn-close:focus, .modal__close:focus, .modal__close:hover {
   fill: #2196f3;
   cursor: pointer;
-}
-
-.modal__input {
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border-radius: 4px;
-  padding-left: 40px;
-  -webkit-transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal__textarea:focus + label,
