--- a/scss/layout/_modal.scss
+++ b/scss/layout/_modal.scss
@@ -93,14 +93,15 @@
   cursor: pointer;
 }
   &__input {
-    width: 100%;
-    height: 40px;
+    @extend %input-modal;
+    // width: 100%;
+    // height: 40px;
     
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    box-sizing: border-box;
-    border-radius: 4px;
-    padding-left: 40px;
-    transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
+    // border: 1px solid rgba(33, 33, 33, 0.2);
+    // box-sizing: border-box;
+    // border-radius: 4px;
+    // padding-left: 40px;
+    // transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   &__textarea:focus + label,
