--- a/css/main.css
+++ b/css/main.css
@@ -314,8 +314,8 @@ a {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 4px;
-  -webkit-transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 a {
