--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,3 +1,24 @@
+%btn-base{
+
+}
+%btn-fix-size{
+
+}
+%btn-add-size{
+
+}
+%btn-color{
+
+}
+%btn-text{
+
+}
+%btn-icon{
+
+}
+%btn-{
+
+}
 .button{
     font-family : Roboto;
     font-size: 16px;
