--- a/css/main.css
+++ b/css/main.css
@@ -162,25 +162,21 @@ a {
           transform: translate(-50%, -50%) scale(10%);
 }
 
-.button {
-  font-family: Roboto;
-  font-size: 16px;
-  border: none;
+.hero__btn {
   border-radius: 4px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /*filter*/
 }
 
-.button:hover {
+.hero__btn:hover {
   color: #ffffff;
   background-color: #188ce8;
   cursor: pointer;
 }
 
-.button__main {
+.hero__btn {
   width: 200px;
   height: 50px;
   -webkit-box-pack: center;
@@ -189,21 +185,20 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-style: 700;
-  line-height: 1.875;
-  color: #ffffff;
-  background-color: #2196f3;
-  line-height: 1.625;
-  letter-spacing: 6%;
 }
 
-.button__filter {
-  padding: 6px 22px;
-  font-style: 400;
-  color: #212121;
-  background-color: #f5f4fa;
+.hero__btn {
+  color: #ffffff;
+  background-color: #2196f3;
+}
+
+.hero__btn {
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: 700;
+  line-height: 1.875;
   line-height: 1.625;
-  letter-spacing: 3%;
+  letter-spacing: 6%;
 }
 
 .botton__icon {
