--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -8,19 +8,25 @@
     cursor: pointer;
 }
 }
-%btn-fix-size{
+%btn-size-fix {
   width: 200px;
   height: 50px;
+  //display: flex;
   justify-content: center;
   align-items: center;
 }
-%btn-add-size{
+%btn-size-add {
   padding: 6px 22px;
 }
-%btn-color{
-
+%btn-color-1 {
+  color: $colorMaxLight;
+  background-color: $colorBtnBg-activ;
 }
-%btn-text-1{
+%btn-color-2 {
+  color: $colorTxt-secondary;
+  background-color: $colorBtnBg-activ;
+}
+%btn-text-1 {
   font-family : Roboto;
   font-size: 16px;
   font-style: 700;
@@ -28,7 +34,7 @@
   line-height: 1.625;
   letter-spacing: 6%;
 }
-%btn-text-2{
+%btn-text-2 {
   font-family : Roboto;
   font-size: 16px;
   font-style: 400;
@@ -36,7 +42,7 @@
   line-height: 1.625;
   letter-spacing: 3%;
 }
-%btn-icon{
+%btn-icon {
   position: relative;
   display: inline-block;
   top: 6px;
@@ -45,46 +51,51 @@
   width: 24px;
   height: 24px;
 }
-%btn-{
+%btn-use {
 
 }
-.button{
-    font-family : Roboto;
-    font-size: 16px;
-    border: none;
-    border-radius: 4px;
-    box-shadow: $shadow-box;
-    transition: background-color 250ms $cubic;
+%filter {
+  @extend %btn-base;
+  @extend %btn-size-add;
+  @extend %btn-text-2;
+  @extend %btn-color-2;
+}
+%main {
+  @extend %btn-base;
+  @extend %btn-size-fix;
+  @extend %btn-text-1;
+  @extend %btn-color-1;
+}
+// .button {
+//     font-family : Roboto;
+//     font-size: 16px;
+//     border: none;
+//     border-radius: 4px;
+//     box-shadow: $shadow-box;
+//     transition: background-color 250ms $cubic;
 
-    &:hover {
-        color: $colorTxt-main;
-        background-color: $colorBtnBg-hover;
-        cursor: pointer;
-    }
+//     &:hover {
+//         color: $colorTxt-main;
+//         background-color: $colorBtnBg-hover;
+//         cursor: pointer;
+//     }
 
 
-    &__main{
-        width: 200px;
-        height: 50px;
-        justify-content: center;
-        align-items: center;
-        font-style: 700;
-        line-height: 1.875;
-        color: $colorMaxLight;
-        background-color: $colorBtnBg-activ;
-        line-height: 1.625;
-        letter-spacing: 6%;
-    }
-/*filter*/  
-    &__filter{
-        padding: 6px 22px;
-        font-style: 400;
-        color: $colorTxt-secondary;
-        background-color: $colorBtnBg-filter;
-        line-height: 1.625;
-        letter-spacing: 3%;
-    }
-}    
+//     &__main {
+//         width: 200px;
+//         height: 50px;
+//         justify-content: center;
+//         align-items: center;
+//         font-style: 700;
+//         line-height: 1.875;
+//         color: $colorMaxLight;
+//         background-color: $colorBtnBg-activ;
+//         line-height: 1.625;
+//         letter-spacing: 6%;
+//     }
+// /*filter*/  
+    
+// }    
 .botton__icon {
     position: relative;
     display: inline-block;
@@ -107,7 +118,14 @@
   $color--primary: #b29;
 $color--secondary: #19d;
 
-
+// &__filter{
+//   padding: 6px 22px;
+//   font-style: 400;
+//   color: $colorTxt-secondary;
+//   background-color: $colorBtnBg-filter;
+//   line-height: 1.625;
+//   letter-spacing: 3%;
+// }
 
 %btn--base {
     font-family : Roboto;
