--- a/scss/layout2/_filter.scss
+++ b/scss/layout2/_filter.scss
@@ -7,7 +7,11 @@
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
+    &__btn{
+      
+      @extend %filter;
   }
+}
   
   .filter > li + li {
     margin-left: 8px;
