--- a/scss/layout/_advantages.scss
+++ b/scss/layout/_advantages.scss
@@ -33,5 +33,7 @@
     &__text {
         display: inline-block;
         width: 270px;
+        font-size: 14px;
+        font-weight: 400;
     }
 }
