--- a/css/main.css
+++ b/css/main.css
@@ -698,6 +698,8 @@ a {
 .advantages__text {
   display: inline-block;
   width: 270px;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .craft__title {
@@ -1320,4 +1322,111 @@ a {
 /*********************************/
 /******конец страницы*************/
 /*********************************/
+.main-contakts {
+  text-align: center;
+  background-color: antiquewhite;
+}
+
+.h1c {
+  font-size: 146px;
+  color: #fff;
+  text-shadow: 0 0 5px #fff,  0 0 10px #fff,  0 0 15px #fff,  0 0 20px #49ff18,  0 0 30px #49ff18,  0 0 40px #49ff18,  0 0 55px #49ff18,  0 0 75px #49ff18;
+  border-radius: 70px 70px;
+  margin-top: 100px;
+}
+
+h6 {
+  font-size: 35px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  color: #fff;
+  text-shadow: #969696 1px 3px 0,  #aba8a8 1px 7px 5px;
+  margin: 0 0 30px;
+}
+
+p {
+  font-size: 24px;
+  margin-bottom: 100px;
+}
+
+.ex {
+  position: relative;
+  width: 200px;
+  height: 50px;
+  border-radius: 25px 4px 4px 25px;
+  border: none;
+  padding-left: 25px;
+  margin-bottom: 100px;
+  font-size: 26px;
+  -webkit-box-shadow: inset 0px 5px 3px 0px #bababa;
+          box-shadow: inset 0px 5px 3px 0px #bababa;
+}
+
+.exoverlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.ex:hover .overlay {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+  color: #ffffff;
+}
+
+.ex:hover {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+  color: #ffffff;
+}
+
+.button- {
+  width: 200px;
+  height: 50px;
+  border-radius: 4px 25px 25px 4px;
+  border: none;
+  font-size: 26px;
+  font-weight: 700;
+  text-shadow: 2px 2px 4px #bababa;
+  text-transform: uppercase;
+  color: #616161;
+  background-color: burlywood;
+  text-shadow: #e0e0e0 1px 1px 0;
+  -webkit-box-shadow: -15px -15px 15px -5px rgba(34, 60, 80, 0.6) inset;
+          box-shadow: -15px -15px 15px -5px rgba(34, 60, 80, 0.6) inset;
+}
+
+h5 {
+  font-size: 30px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  color: #fff;
+  text-shadow: #969696 1px 3px 0,  #aba8a8 1px 7px 5px;
+}
+
+.button-- {
+  margin-bottom: 100px;
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #e6e6e6;
+  font-size: 20px;
+  padding: 20px 45px 20px;
+  text-shadow: 2px 2px 4px rgba(30, 30, 30, 0.8);
+  border-radius: 30px;
+  background: #3e1414;
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(3%, #3e1414), color-stop(61%, #fa1414));
+  background: linear-gradient(0deg, #3e1414 3%, #fa1414 61%);
+  -webkit-box-shadow: 0px 2px 1px rgba(50, 50, 50, 0.75);
+          box-shadow: 0px 2px 1px rgba(50, 50, 50, 0.75);
+}
 /*# sourceMappingURL=main.css.map */
