--- a/scss/layout2/_contacts.scss
+++ b/scss/layout2/_contacts.scss
@@ -31,10 +31,10 @@ h6{
 
 }
 
-p{
-    font-size: 24px;
-    margin-bottom: 100px;
-}
+// p{
+//     font-size: 24px;
+//     //margin-bottom: 100px;
+// }
 .ex
 {
     position: relative;
